quick-fix styling for type/visibility indicators on /content

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1053,12 +1053,10 @@ button>.loading {
   grid-gap: var(--margin);
 }
 
-/*
 .project .above  {
   grid-column: 1 / -1;
   grid-row: 1;
 }
-*/
 
 .project .left {
   background-color: var(--color-fg);
@@ -1120,6 +1118,14 @@ button>.loading {
   grid-row: 4;
 }
 */
+
+.project ~ .project--status {
+  display: grid;
+  grid-auto-flow: column;
+  grid-gap: var(--margin);
+  justify-content: space-between;
+  width: 100%;
+}
 
 .project .below,
 .visibility .below {
@@ -1698,6 +1704,7 @@ button>.loading {
     height: calc(var(--margin) * 7.8);
   }
 
+  /*
   .project :nth-child(4) {
     grid-column: 3;
     grid-row: 2;
@@ -1714,6 +1721,7 @@ button>.loading {
     grid-column: 3;
     grid-row: 4;
   }
+  */
 
   .project .below,
   .visibility .below {
